monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A2103/A2103b.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A2103;

grammar A2103b {
  external A;

  B extends A;

}
